ingress/productapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productapp-ingress
  namespace: productapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: product-client-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-client-app-service
            port:
              number: 80
  - host: productapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productapi-service
            port:
              number: 80
